# cargo-template

./: .dockerignore  .gitignore.liquid  Cargo.toml  Dockerfile  Makefile  README.md  cargo-generate.toml  config.toml  docker-compose.yaml
src/: lib.rs  main.rs  server.rs  settings.rs
