[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
description = "{{project_description}}"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["multipart"] }
chrono = "0.4.40"
config = "0.15.11"
env_logger = "0.11.7"
log = "0.4.27"
once_cell = "1.21.1"
owo-colors = "4.2.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
dotenv = "0.15.0"
